# atlas-research-agents

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  observability.py
backend/app/api/: __init__.py  routes_runs.py  sse.py
backend/app/graph/: __init__.py  builder.py  demo.py  routing.py  (+1 more)
backend/evals/: EXPERIMENTS.md  SAMPLE_RESULTS.md  __init__.py  benchmark_topics.jsonl  graders.py  judge.py  project_costs.py  report_template.md  run_benchmark.py
backend/tests/: api_helpers.py  conftest.py  eval_helpers.py  fakes.py  test_api_replay.py  test_api_resume_guards.py  test_api_run_lifecycle.py  test_approval_gate_unit.py  test_approval_interrupt.py  test_approval_restart.py  test_benchmark_selection.py  test_benchmark_topics_wellformed.py  test_calculator.py  test_checkpointer_factory.py  test_citation_grader_antifab.py  test_citation_grader_dangling.py  test_config.py  test_config_routing.py  test_cost_breakdown.py  test_coverage_grader.py  test_exec_summary_word_cap.py  test_export_report_headers.py  test_graph_degraded.py  test_graph_invoke.py  test_graph_review_loop.py  test_groundedness_grader.py  test_health.py  test_is_success_rule.py  test_planner.py  test_rag_disabled.py  test_report_structure_contract.py  test_reviewer.py  test_route_after_review.py  test_router_routing.py  test_routing_fanout.py  test_run_detail_sources.py  test_run_service.py  test_runs_repo.py  test_source_snippet_clamped.py  test_sse_event_models.py  (+15 more)
(+114 files in other folders)
